--- a/assignments/week-02-twitter-sentiment-analysis/imports.ipynb
+++ b/assignments/week-02-twitter-sentiment-analysis/imports.ipynb
@@ -2,10 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dd8ca316",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (4.23.1)\n",
+      "Requirement already satisfied: torch in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (1.12.1)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (0.13.1)\n",
+      "Requirement already satisfied: requests in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (2.28.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (21.3)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (1.23.4)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (4.64.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (0.10.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (2022.9.13)\n",
+      "Requirement already satisfied: filelock in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from transformers) (3.8.0)\n",
+      "Requirement already satisfied: typing-extensions in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from torch) (4.3.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from requests->transformers) (1.26.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (from requests->transformers) (2022.9.24)\n",
+      "Requirement already satisfied: emoji==0.6.0 in /Users/moutasemhome/opt/anaconda3/envs/sa/lib/python3.8/site-packages (0.6.0)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9249d08692a42dbbc9bf1b00dd2db4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.42k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "!pip install transformers torch\n",
     "!pip install emoji==0.6.0\n",
@@ -14,6 +53,14 @@
     "\n",
     "pinstall = pipeline(model=\"finiteautomata/bertweet-base-sentiment-analysis\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93b39cc3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
