--- a/assignments/week-01-mle-basictools/nb/unix-conda-pip.ipynb
+++ b/assignments/week-01-mle-basictools/nb/unix-conda-pip.ipynb
@@ -1339,7 +1339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.14 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1353,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
