--- a/assignments/week-01-mle-basictools/pandas-sklearn-basics/pandas-sklearn-basics.ipynb
+++ b/assignments/week-01-mle-basictools/pandas-sklearn-basics/pandas-sklearn-basics.ipynb
@@ -62,7 +62,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /Users/moutasemhome/opt/anaconda3/envs/sa\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - scikit-learn\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    certifi-2022.6.15          |   py38hecd8cb5_0         157 KB  anaconda\n",
+      "    libgfortran-3.0.1          |       h93005f0_2         495 KB  anaconda\n",
+      "    scikit-learn-1.0.2         |   py38hae1ba45_1         7.0 MB  anaconda\n",
+      "    scipy-1.7.3                |   py38h8c7af03_0        20.2 MB  anaconda\n",
+      "    threadpoolctl-2.2.0        |     pyh0d69192_0          16 KB  anaconda\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:        27.8 MB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  joblib             anaconda/noarch::joblib-1.1.0-pyhd3eb1b0_0 None\n",
+      "  libgfortran        anaconda/osx-64::libgfortran-3.0.1-h93005f0_2 None\n",
+      "  scikit-learn       anaconda/osx-64::scikit-learn-1.0.2-py38hae1ba45_1 None\n",
+      "  scipy              anaconda/osx-64::scipy-1.7.3-py38h8c7af03_0 None\n",
+      "  threadpoolctl      anaconda/noarch::threadpoolctl-2.2.0-pyh0d69192_0 None\n",
+      "\n",
+      "The following packages will be SUPERSEDED by a higher-priority channel:\n",
+      "\n",
+      "  ca-certificates    pkgs/main::ca-certificates-2022.10.11~ --> anaconda::ca-certificates-2022.4.26-hecd8cb5_0 None\n",
+      "  certifi            pkgs/main::certifi-2022.9.24-py38hecd~ --> anaconda::certifi-2022.6.15-py38hecd8cb5_0 None\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "scipy-1.7.3          | 20.2 MB   | ##################################### | 100% \n",
+      "scikit-learn-1.0.2   | 7.0 MB    | ########                              |  22% "
+     ]
+    }
+   ],
+   "source": [
+    "!conda install -c anaconda scikit-learn --y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +224,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qk/l_xbycpx5hv535475y2nss_r0000gn/T/ipykernel_70283/2079375105.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/qk/l_xbycpx5hv535475y2nss_r0000gn/T/ipykernel_45642/2079375105.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(pd.Series(new, index=df.columns[:len(new)]), ignore_index=True)\n"
      ]
     }
@@ -188,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +332,7 @@
        "6    Milan     8       Instructor"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +445,7 @@
        "7    Milan    8       Instructor"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,224 +467,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>bp</th>\n",
-       "      <th>s1</th>\n",
-       "      <th>s2</th>\n",
-       "      <th>s3</th>\n",
-       "      <th>s4</th>\n",
-       "      <th>s5</th>\n",
-       "      <th>s6</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.038076</td>\n",
-       "      <td>0.050680</td>\n",
-       "      <td>0.061696</td>\n",
-       "      <td>0.021872</td>\n",
-       "      <td>-0.044223</td>\n",
-       "      <td>-0.034821</td>\n",
-       "      <td>-0.043401</td>\n",
-       "      <td>-0.002592</td>\n",
-       "      <td>0.019907</td>\n",
-       "      <td>-0.017646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.001882</td>\n",
-       "      <td>-0.044642</td>\n",
-       "      <td>-0.051474</td>\n",
-       "      <td>-0.026328</td>\n",
-       "      <td>-0.008449</td>\n",
-       "      <td>-0.019163</td>\n",
-       "      <td>0.074412</td>\n",
-       "      <td>-0.039493</td>\n",
-       "      <td>-0.068332</td>\n",
-       "      <td>-0.092204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.085299</td>\n",
-       "      <td>0.050680</td>\n",
-       "      <td>0.044451</td>\n",
-       "      <td>-0.005670</td>\n",
-       "      <td>-0.045599</td>\n",
-       "      <td>-0.034194</td>\n",
-       "      <td>-0.032356</td>\n",
-       "      <td>-0.002592</td>\n",
-       "      <td>0.002861</td>\n",
-       "      <td>-0.025930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.089063</td>\n",
-       "      <td>-0.044642</td>\n",
-       "      <td>-0.011595</td>\n",
-       "      <td>-0.036656</td>\n",
-       "      <td>0.012191</td>\n",
-       "      <td>0.024991</td>\n",
-       "      <td>-0.036038</td>\n",
-       "      <td>0.034309</td>\n",
-       "      <td>0.022688</td>\n",
-       "      <td>-0.009362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.005383</td>\n",
-       "      <td>-0.044642</td>\n",
-       "      <td>-0.036385</td>\n",
-       "      <td>0.021872</td>\n",
-       "      <td>0.003935</td>\n",
-       "      <td>0.015596</td>\n",
-       "      <td>0.008142</td>\n",
-       "      <td>-0.002592</td>\n",
-       "      <td>-0.031988</td>\n",
-       "      <td>-0.046641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>437</th>\n",
-       "      <td>0.041708</td>\n",
-       "      <td>0.050680</td>\n",
-       "      <td>0.019662</td>\n",
-       "      <td>0.059744</td>\n",
-       "      <td>-0.005697</td>\n",
-       "      <td>-0.002566</td>\n",
-       "      <td>-0.028674</td>\n",
-       "      <td>-0.002592</td>\n",
-       "      <td>0.031193</td>\n",
-       "      <td>0.007207</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>438</th>\n",
-       "      <td>-0.005515</td>\n",
-       "      <td>0.050680</td>\n",
-       "      <td>-0.015906</td>\n",
-       "      <td>-0.067642</td>\n",
-       "      <td>0.049341</td>\n",
-       "      <td>0.079165</td>\n",
-       "      <td>-0.028674</td>\n",
-       "      <td>0.034309</td>\n",
-       "      <td>-0.018114</td>\n",
-       "      <td>0.044485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439</th>\n",
-       "      <td>0.041708</td>\n",
-       "      <td>0.050680</td>\n",
-       "      <td>-0.015906</td>\n",
-       "      <td>0.017293</td>\n",
-       "      <td>-0.037344</td>\n",
-       "      <td>-0.013840</td>\n",
-       "      <td>-0.024993</td>\n",
-       "      <td>-0.011080</td>\n",
-       "      <td>-0.046883</td>\n",
-       "      <td>0.015491</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>440</th>\n",
-       "      <td>-0.045472</td>\n",
-       "      <td>-0.044642</td>\n",
-       "      <td>0.039062</td>\n",
-       "      <td>0.001215</td>\n",
-       "      <td>0.016318</td>\n",
-       "      <td>0.015283</td>\n",
-       "      <td>-0.028674</td>\n",
-       "      <td>0.026560</td>\n",
-       "      <td>0.044529</td>\n",
-       "      <td>-0.025930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>441</th>\n",
-       "      <td>-0.045472</td>\n",
-       "      <td>-0.044642</td>\n",
-       "      <td>-0.073030</td>\n",
-       "      <td>-0.081413</td>\n",
-       "      <td>0.083740</td>\n",
-       "      <td>0.027809</td>\n",
-       "      <td>0.173816</td>\n",
-       "      <td>-0.039493</td>\n",
-       "      <td>-0.004222</td>\n",
-       "      <td>0.003064</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>442 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          age       sex       bmi        bp        s1        s2        s3  \\\n",
-       "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
-       "1   -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
-       "2    0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n",
-       "3   -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
-       "4    0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
-       "..        ...       ...       ...       ...       ...       ...       ...   \n",
-       "437  0.041708  0.050680  0.019662  0.059744 -0.005697 -0.002566 -0.028674   \n",
-       "438 -0.005515  0.050680 -0.015906 -0.067642  0.049341  0.079165 -0.028674   \n",
-       "439  0.041708  0.050680 -0.015906  0.017293 -0.037344 -0.013840 -0.024993   \n",
-       "440 -0.045472 -0.044642  0.039062  0.001215  0.016318  0.015283 -0.028674   \n",
-       "441 -0.045472 -0.044642 -0.073030 -0.081413  0.083740  0.027809  0.173816   \n",
-       "\n",
-       "           s4        s5        s6  \n",
-       "0   -0.002592  0.019907 -0.017646  \n",
-       "1   -0.039493 -0.068332 -0.092204  \n",
-       "2   -0.002592  0.002861 -0.025930  \n",
-       "3    0.034309  0.022688 -0.009362  \n",
-       "4   -0.002592 -0.031988 -0.046641  \n",
-       "..        ...       ...       ...  \n",
-       "437 -0.002592  0.031193  0.007207  \n",
-       "438  0.034309 -0.018114  0.044485  \n",
-       "439 -0.011080 -0.046883  0.015491  \n",
-       "440  0.026560  0.044529 -0.025930  \n",
-       "441 -0.039493 -0.004222  0.003064  \n",
-       "\n",
-       "[442 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_diabetes\n\u001b[1;32m      2\u001b[0m dfX, Y \u001b[38;5;241m=\u001b[39m load_diabetes(return_X_y\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, as_frame\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m dfX\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
     }
    ],
    "source": [
@@ -2048,7 +1900,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2062,9 +1914,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "f70fe2e7e7cb52bf2bf0a2d8cc8af5768efe1556307d7c8f07dd0e6b20b16428"
