added answers to the models comparison questions

--- a/assignments/week-02-twitter-sentiment-analysis/nb/analyze-sentiment-twitter.ipynb
+++ b/assignments/week-02-twitter-sentiment-analysis/nb/analyze-sentiment-twitter.ipynb
@@ -541,6 +541,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc135045",
+   "metadata": {},
+   "source": [
+    "- The \"distilbert-base\" has an extra label (Neutral)\n",
+    "- They look better because there are some neutral tweets that are better fitted to the new label."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6684f9ae",
    "metadata": {},
    "source": [
@@ -662,14 +671,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "c3759904",
+   "cell_type": "markdown",
+   "id": "9d50b496",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# the last statement was classified more accurately by BERT\n",
-    "# yes, for example the first statement yielded different results"
+    "- The last statement was classified more accurately by BERT\n",
+    "- Yes, for example the first statement yielded different results"
    ]
   },
   {
@@ -697,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
