--- a/assignments/week-04-data-eng-airflow/prework/imports.ipynb
+++ b/assignments/week-04-data-eng-airflow/prework/imports.ipynb
@@ -16,7 +16,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Using cached scikit_learn-1.1.3-cp39-cp39-macosx_10_9_x86_64.whl (8.7 MB)\n",
+      "Requirement already satisfied: scipy in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (1.9.1)\n",
+      "Collecting scipy\n",
+      "  Using cached scipy-1.9.3-cp39-cp39-macosx_10_9_x86_64.whl (34.3 MB)\n",
+      "Requirement already satisfied: matplotlib in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (3.5.2)\n",
+      "Collecting matplotlib\n",
+      "  Using cached matplotlib-3.6.2-cp39-cp39-macosx_10_12_x86_64.whl (7.3 MB)\n",
+      "Collecting threadpoolctl>=2.0.0\n",
+      "  Using cached threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
+      "Collecting joblib>=1.0.0\n",
+      "  Using cached joblib-1.2.0-py3-none-any.whl (297 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from scikit-learn) (1.23.3)\n",
+      "Collecting contourpy>=1.0.1\n",
+      "  Using cached contourpy-1.0.6-cp39-cp39-macosx_10_9_x86_64.whl (240 kB)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (9.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (4.25.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from matplotlib) (1.4.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "\u001b[33mWARNING: Error parsing requirements for google-pasta: [Errno 2] No such file or directory: '/Users/moutasemhome/opt/anaconda3/envs/self-drive/lib/python3.9/site-packages/google_pasta-0.2.0.dist-info/METADATA'\u001b[0m\u001b[33m\n",
+      "\u001b[0mInstalling collected packages: threadpoolctl, scipy, joblib, contourpy, scikit-learn, matplotlib\n",
+      "  Attempting uninstall: scipy\n",
+      "    Found existing installation: scipy 1.9.1\n",
+      "    Uninstalling scipy-1.9.1:\n",
+      "      Successfully uninstalled scipy-1.9.1\n",
+      "  Attempting uninstall: matplotlib\n",
+      "    Found existing installation: matplotlib 3.5.2\n",
+      "    Uninstalling matplotlib-3.5.2:\n",
+      "      Successfully uninstalled matplotlib-3.5.2\n",
+      "Successfully installed contourpy-1.0.6 joblib-1.2.0 matplotlib-3.6.2 scikit-learn-1.1.3 scipy-1.9.3 threadpoolctl-3.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -U scikit-learn scipy matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +83,18 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.linear_model import LinearRegression\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
